--- a/try 1/style.css
+++ b/try 1/style.css
@@ -24,7 +24,7 @@
     padding: 50px auto;
     background-color: #7d7f7f;
     border: 1px solid black;
-    /* color: transparent; */
+    color: transparent;
     border-radius: 10px;
     width: 100px;
     height: 100px;
